--- a/linux/debian/nextcloud-client/debian/changelog
+++ b/linux/debian/nextcloud-client/debian/changelog
@@ -1,3 +1,9 @@
+nextcloud-client (2.2.4-1.1~yakkety1) yakkety; urgency=medium
+
+  * Added Nautilus and Nemo syncstate extensions.
+
+ -- István Váradi <ivaradi@varadiistvan.hu>  Tue, 17 Jan 2017 19:55:32 +0100
+
 nextcloud-client (2.2.4-1.0~yakkety1) yakkety; urgency=medium
 
   * Initial release.
