--- a/linux/debian/nextcloud-client/debian.xenial/changelog
+++ b/linux/debian/nextcloud-client/debian.xenial/changelog
@@ -1,3 +1,9 @@
+nextcloud-client (2.2.4-1.2~xenial1) xenial; urgency=medium
+
+  * Fixed appname in the Nemo syncstate extension.
+
+ -- István Váradi <ivaradi@varadiistvan.hu>  Thu, 19 Jan 2017 16:46:50 +0100
+
 nextcloud-client (2.2.4-1.1~xenial1) xenial; urgency=medium
 
   * Added Nautilus and Nemo syncstate extensions.
