--- a/linux/debian/nextcloud-client/debian.trusty/changelog
+++ b/linux/debian/nextcloud-client/debian.trusty/changelog
@@ -1,3 +1,10 @@
+nextcloud-client (2.2.4-1.3~trusty1) trusty; urgency=medium
+
+  * Caja syncstate plugin is built.
+  * The syncstate plugin has application-specific name
+
+ -- István Váradi <ivaradi@varadiistvan.hu>  Fri, 27 Jan 2017 19:34:18 +0100
+
 nextcloud-client (2.2.4-1.2~trusty1) trusty; urgency=medium
 
   * Fixed appname in the Nemo syncstate extension.
