--- a/linux/debian/nextcloud-client/debian.trusty/changelog
+++ b/linux/debian/nextcloud-client/debian.trusty/changelog
@@ -1,3 +1,9 @@
+nextcloud-client (2.2.4-1.4~trusty1) trusty; urgency=medium
+
+  * The locale-specific icon names are correct too
+
+ -- István Váradi <ivaradi@varadiistvan.hu>  Tue, 7 Feb 2017 19:55:40 +0100
+
 nextcloud-client (2.2.4-1.3~trusty1) trusty; urgency=medium
 
   * Caja syncstate plugin is built.
