--- a/linux/debian/nextcloud-client/debian/changelog
+++ b/linux/debian/nextcloud-client/debian/changelog
@@ -1,3 +1,9 @@
+nextcloud-client (2.3.0-beta1-1.0~yakkety1) yakkety; urgency=medium
+
+  * New upstream version
+
+ -- István Váradi <ivaradi@varadiistvan.hu>  Fri, 17 Feb 2017 20:04:38 +0100
+
 nextcloud-client (2.2.4-1.4~yakkety1) yakkety; urgency=medium
 
   * The locale-specific icon names are correct too
