--- a/linux/debian/nextcloud-client/debian/changelog
+++ b/linux/debian/nextcloud-client/debian/changelog
@@ -1,8 +1,8 @@
-nextcloud-client (2.3.0-beta1-1.0~yakkety1) yakkety; urgency=medium
+nextcloud-client (2.3.0-1.0~yakkety1) yakkety; urgency=medium
 
   * New upstream version
 
- -- István Váradi <ivaradi@varadiistvan.hu>  Fri, 17 Feb 2017 20:04:38 +0100
+ -- István Váradi <ivaradi@varadiistvan.hu>  Tue, 21 Mar 2017 19:34:13 +0100
 
 nextcloud-client (2.2.4-1.4~yakkety1) yakkety; urgency=medium
 
