--- a/linux/debian/nextcloud-client/debian.stable/changelog
+++ b/linux/debian/nextcloud-client/debian.stable/changelog
@@ -1,4 +1,10 @@
-nextcloud-client (2.3.0-1.0) yakkety; urgency=medium
+nextcloud-client (2.3.1-1.0) stable; urgency=medium
+
+  * New upstream version
+
+ -- István Váradi <ivaradi@varadiistvan.hu>  Thu, 23 Mar 2017 19:07:36 +0100
+
+nextcloud-client (2.3.0-1.0) stable; urgency=medium
 
   * New upstream version
 
