--- a/linux/debian/nextcloud-client/debian.xenial/changelog
+++ b/linux/debian/nextcloud-client/debian.xenial/changelog
@@ -1,3 +1,9 @@
+nextcloud-client (2.3.1-1.0~xenial1) xenial; urgency=medium
+
+  * New upstream version
+
+ -- István Váradi <ivaradi@varadiistvan.hu>  Thu, 23 Mar 2017 19:07:36 +0100
+
 nextcloud-client (2.3.0-1.0~xenial1) xenial; urgency=medium
 
   * New upstream version
